# RobotDataForge

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  index.html  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/tests/: test_api_contract.py  test_curator.py  test_data_trust_layer_proof_script.py  test_dataset_export_regressions.py  test_episode_lifecycle.py  test_evaluation_storage_metadata.py  test_evaluator.py  test_exporter.py  test_external_robot_data_ingest_eval_v0.py  test_file_drop_api_bridge.py  test_isaac_runtime_recorder.py  test_lerobot_public_dataset_matrix.py  test_lerobot_public_slice_semantic_parity.py  test_mvp1_live_export_smoke_script.py  test_mvp1_offline_readiness_script.py  test_mvp1_proof_audit_script.py  test_mvp1_replay_gate_script.py  test_mvp1_trainer_smoke_script.py  test_mvp1c_final_hud_ingest_preflight_script.py  test_mvp1c_headless_eval_bundle_script.py  test_mvp1c_isaac_policy_ab_smoke_script.py  test_mvp1c_policy_uplift_smoke_script.py  test_mvp1c_real_policy_eval_script.py  test_mvp1c_rollout_result_adapter_script.py  test_mvp1plus_embodiment_proof_script.py  test_mvp2_curation_diagnostic_script.py  test_mvp2_learning_proven_policy_eval_script.py  test_mvp2_learning_sanity_script.py  test_mvp2_ur_policy_ab_harness_script.py  test_mvp2b_isaac_proof_evaluator_script.py  test_mvp2c_isaac_training_calibration_script.py  test_mvp3a_actual_isaac_evidence.py  test_mvp3a_proof_infrastructure.py  (+28 more)
docs/: API_SPEC.md  (+12 more)
(+670 files in other folders)
