[project]
name = "robot-data-forge-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
